--- a/static/scss/tailwind.scss
+++ b/static/scss/tailwind.scss
@@ -568,6 +568,19 @@ table.list{
   }
 }
 
+table.header {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.linked.is-active {
+  cursor: none;
+  color: #999999;
+  cursor: text;
+  text-decoration: none;
+  pointer-events: none;
+}
+
 .flow-start-type-selector {
   a {
     display: inline-block;
@@ -576,6 +589,7 @@ table.list{
       color: #999999;
       cursor: text;
       text-decoration: none;
+      pointer-events: none;
     }
   }
 }
