--- a/templates/contacts/contact_filter_spa.haml
+++ b/templates/contacts/contact_filter_spa.haml
@@ -6,5 +6,5 @@
 
 -block subtitle
   -if current_group.is_smart
-    .font-mono.text-sm.mb-4.bg-gray-200.text-gray-700.p-3.rounded-lg
+    .font-mono.text-sm.mt-2.bg-gray-200.text-gray-700.p-3.rounded-lg
       {{ current_group.query }}
