--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -7,7 +7,7 @@
   %head
     %title
       -block page-title
-        {{ brand.name }} - {{ brand.title }}
+        {{title}}
 
     %meta{charset:"utf-8"}
     %meta{name:"viewport", content:"width=device-width, initial-scale=1.0"}
