--- a/templates/request_logs/httplog_list.haml
+++ b/templates/request_logs/httplog_list.haml
@@ -8,25 +8,39 @@
   {{ title }}
 
 -block subtitle
-  %a(href="{{ source_url }}")
-    {{ source.name }}
+  -if not is_spa
+    .linked(onclick="goto(event, this)" href="{{ source_url }}")
+      {{ source.name }}
+
+-block extra-style
+  {{block.super}}
+  :css
+    td { 
+      padding-bottom: 0.25em;
+      padding-right: 1em;
+      padding-left: 1em;
+    }
 
 -block table
   %table.rounded-b-lg.shadow.bg-white
     %tbody
-    -for obj in object_list
-      %tr(class="{% if obj.is_error %}warning{% endif %}")
-        %td.w-full.clickable.p-4
-          %a(href='{% url "request_logs.httplog_read" obj.id %}')
-            {{ obj.get_log_type_display }}
-        %td.clickable.p-4
-        
-          %a.whitespace-nowrap(href='{% url "request_logs.httplog_read" obj.id %}')
-            {{ obj.status_code|default:"--" }}
-        %td.whitespace-nowrap.p-4
-          -if obj.request_time
-            {{ obj.request_time|intcomma }}ms
-          -else
-            {{ "--" }}
-        %td.text-right.whitespace-nowrap.p-4
-          {% format_datetime obj.created_on seconds=True %}
+      %tr
+        %td.p-1
+      -for obj in object_list
+        %tr(class="{% if obj.is_error %}warning{% endif %}")
+          %td.w-full.clickable
+            .linked(onclick="goto(event, this)" href='{% url "request_logs.httplog_read" obj.id %}')
+              {{ obj.get_log_type_display }}
+          %td.clickable
+            .linked.whitespace-nowrap(onclick="goto(event, this)" href='{% url "request_logs.httplog_read" obj.id %}')
+              {{ obj.status_code|default:"--" }}
+          %td.whitespace-nowrap
+            -if obj.request_time
+              {{ obj.request_time|intcomma }}ms
+            -else
+              {{ "--" }}
+          %td.text-right.whitespace-nowrap
+            {% format_datetime obj.created_on seconds=True %}
+      %tr
+        %td.p-1
+    
