--- a/templates/request_logs/httplog_webhooks.haml
+++ b/templates/request_logs/httplog_webhooks.haml
@@ -7,8 +7,8 @@
 -block title
   {{ title }}
 
--block content
-  %table.list.object-list.lined
+-block table
+  %table.list.lined.header
     %thead
       %tr
         %th
@@ -26,13 +26,13 @@
       -for obj in object_list
         %tr(class="{% if obj.is_error %}warning{% endif %}")
           %td.clickable
-            %a(href='{% url "flows.flow_editor" obj.flow.uuid %}')
+            .linked(onclick="goto(event, this)" href='{% url "flows.flow_editor" obj.flow.uuid %}')
               {{ obj.flow.name }}
           %td.clickable
-            %a(href='{% url "request_logs.httplog_read" obj.id %}')
+            .linked(onclick="goto(event, this)" href='{% url "request_logs.httplog_read" obj.id %}')
               {{ obj.url|truncatechars:128 }}
           %td.clickable
-            %a(href='{% url "request_logs.httplog_read" obj.id %}')
+            .linked(onclick="goto(event, this)" href='{% url "request_logs.httplog_read" obj.id %}')
               {{ obj.status_code|default:"--" }}
           %td.whitespace-nowrap
             -if obj.request_time
@@ -42,6 +42,3 @@
           %td.text-right.whitespace-nowrap
             {% format_datetime obj.created_on seconds=True %}
 
-  -block paginator
-    -if object_list.count
-      -include "includes/pagination.haml"
