--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -456,6 +456,13 @@
         }
       }
 
+      if (response) {
+        var pageTitle = response.headers.get("x-temba-page-title");
+        if (pageTitle) {
+          document.title = pageTitle;
+        }
+      }
+
       document.querySelectorAll(".posterize").forEach(function(ele){
         ele.addEventListener("click", function(){ 
           handlePosterize(ele);
@@ -744,22 +751,23 @@
         .spa-content.p-5.overflow-y-auto.overflow-x-hidden
 
           -block page-header
-
             -if title or has_content_menu
-              .spa-title.no-menu.flex.items-center.mb-4
-                .text-container.text-2xl.text-gray-700
-                  .flex.flex-row
-                    -block spa-title
-                      #title-text
-                        {{title}}
-                .line.flex-grow.mr-2.ml-6
-                  .h-0.border.border-gray-200
-                
-                -if has_content_menu
-                  -include "spa_page_menu.haml"
-          
-              -block subtitle
-          
+              .mb-4
+                .spa-title.no-menu.flex.items-center
+                  .text-container.text-2xl.text-gray-700
+                    .flex.flex-row
+                      -block spa-title
+                        #title-text
+                          {{title}}
+                  .line.flex-grow.mr-2.ml-6
+                    .h-0.border.border-gray-200
+                  
+                  -if has_content_menu
+                    -include "spa_page_menu.haml"
+            
+                .text-lg.text-gray-600
+                    -block subtitle
+                  
           -block alert-messages
             -if user_org.is_suspended
               -include "org_suspended_include.haml"
