--- a/templates/triggers/trigger_create_inbound_call.haml
+++ b/templates/triggers/trigger_create_inbound_call.haml
@@ -37,6 +37,4 @@
       });
     }
 
-    window.addEventListener("DOMContentLoaded", function() {
-      addActionChangeHandler(document) 
-    });
+    onSpload(function(){ addActionChangeHandler(document)});
