Pixel tweak on contact read page

--- a/templates/channels/channel_read.haml
+++ b/templates/channels/channel_read.haml
@@ -171,7 +171,7 @@
                 -else
                   .icon-radio{style:"font-size: 16px"}
 
-              .t-status.px-2
+              .t-status
                 -trans "ON"
                 {{ last_sync.network_type }}
 
