Add lightbox for contact history

--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -154,6 +154,8 @@ html {
   --temba-charcount-summary-right: 0px;
   --temba-charcount-summary-bottom: 0px;
 
+  --color-automated: rgb(78,205,106);
+
 }
 
 temba-button {
