--- a/templates/tickets/ticket_list_spa.haml
+++ b/templates/tickets/ticket_list_spa.haml
@@ -323,4 +323,4 @@
                   Sometimes an automated chatbot isn't enough. When your contacts need to chat with a real person, you can use the
                   Open Ticket action to open a new ticket.
 
-          %temba-contact-chat.shadow(agent="{{request.user.email}}" -temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated" monitor="true" toolbar="true")
+          %temba-contact-chat.shadow.mb-6(agent="{{request.user.email}}" -temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated" monitor="true" toolbar="true")
