Encourage users to try the new interface

--- a/templates/orgs/login/login.haml
+++ b/templates/orgs/login/login.haml
@@ -8,6 +8,9 @@
 
   {% analytics_hook 'login' %}
 
+  :javascript
+    document.cookie = "nav=2; expires=Fri, 31 Dec 9999 23:59:59 GMT; path=/;";
+
   -blocktrans trimmed
     Please sign in with your email address and password.
 
