Tweak simulator placement in new ui

--- a/templates/flows/flow_editor_spa.haml
+++ b/templates/flows/flow_editor_spa.haml
@@ -27,6 +27,14 @@
       height: 100%;
     }
 
+    .simulator {
+      top: 59px !important;
+    }
+
+    .revisions {
+      top: 110px !important;
+    }
+
     #simulator-tab {
       margin-right: 17px;
     }
