Small z-index tweak

--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -745,7 +745,7 @@
           -block page-header
             -if title or has_content_menu
               .mb-4
-                .spa-title.no-menu.flex.items-center.relative.z-0
+                .spa-title.no-menu.flex.items-center
                   .text-container.text-2xl.text-gray-700
                     .flex.flex-row
                       -block spa-title
