--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -298,7 +298,7 @@
   %temba-modax#send-message-modal{ header:"Send Message" }
 
 
-  .top-bar.pb-2
+  .top-bar.pb-2(style="z-index:20")
     .flex.flex-col.pt-4
       .flex.px-6.pb-2
         .title.flex-grow
