--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -340,7 +340,7 @@
     -block interface-option
       -if user.is_authenticated
         #preview.text-center.px-3.text-sm.py-1(style='background:rgba(0,0,0,.75);z-index:10000;position:fixed;bottom:0px;width:100%;color:#fff')
-          Preview the
+          Switch to the
           %span.linked(onclick="switchToNewInterface()" style="color:#43b1ff")<
             new interface
 
