--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -38,6 +38,8 @@
       .text-lg.text-gray-600
         -block subtitle
 
+-block spa-style
+
 -block extra-style
 -block extra-less
 -block extra-script
