--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -742,6 +742,8 @@
 
         .spa-content.p-5.overflow-y-auto.overflow-x-hidden
 
+          -block spa-style
+
           -block page-header
             -if title or has_content_menu
               .mb-4
