--- a/templates/flows/flow_editor_spa.haml
+++ b/templates/flows/flow_editor_spa.haml
@@ -1,7 +1,7 @@
 -extends "smartmin/base.html"
 -load compress temba i18n
 
--block extra-style
+-block spa-style
   {{block.super}}
   :css
     .spa-content {
@@ -31,8 +31,32 @@
       top: 59px !important;
     }
 
+    .simulator .popped {
+      top: 17px !important;
+    }
+
     .revisions {
       top: 110px !important;
+    }
+
+    .revisions .popped {
+      top: -33px !important;
+    }
+
+    .translations {
+      top: 161px !important;
+    }
+
+    .translations .popped {
+      top: -84px !important;
+    }
+
+    .issues {
+      top: 8px !important;
+    }
+
+    .issues .popped {
+      top: 70px !important;
     }
 
     #simulator-tab {
