--- a/templates/msgs/broadcast_scheduled_create.haml
+++ b/templates/msgs/broadcast_scheduled_create.haml
@@ -6,8 +6,8 @@
       -render_field 'omnibox'
 
   -render_field 'text'
-  .fixed-wrapper(style="position:fixed;width:362px;margin-left:200px;margin-top:-10px")
-      %temba-charcount
+
+  %temba-compose(chatbox="true" attachments="true" counter="true" onchange="handleComposeChanged(event)")
 
   -include 'includes/schedule_fields.haml' with form=form
 
@@ -28,7 +28,7 @@
 
   :javascript
 
-    var modalBody = getModax("#create-scheduled").shadowRoot;
+    var modalBody = getModax("#new-scheduled").shadowRoot;
     var repeatPeriod = modalBody.querySelector("#id_repeat_period");
     var repeatDays = modalBody.querySelector(".repeat-days-container");
 
@@ -41,4 +41,16 @@
           repeatDays.classList.add("hidden");
         }
       });
+    }
+
+    function handleComposeChanged(event){
+      debugger;
+      var compose = modalBody.querySelector("temba-compose");
+      if(compose){
+        var text = compose.currentChat;
+        var form_text = modalBody.querySelector("#id_text");
+        if(form_text){
+          form_text.value = text;
+        }
+      }        
     }
