--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -221,7 +221,7 @@
       var uuid = row.getAttribute("data-sender-uuid");
 
       {% if is_spa %}
-      fetchURL("/contact/read/" + uuid + "/");
+      goto(event, row);
       {% else %}
       gotoLink("/contact/read/" + uuid + "/");
       {% endif %}
