--- a/templates/campaigns/campaign_list_spa.haml
+++ b/templates/campaigns/campaign_list_spa.haml
@@ -18,7 +18,7 @@
       }
       var row = event.target.closest("tr");
       var id = row.getAttribute("data-uuid");
-      fetchURL("/campaign/read/" + id + "/");
+      goto(event, row);
     }
 
 -block page-title
@@ -48,7 +48,7 @@
     %table.list.lined.selectable.scrolled
       %tbody
         -for obj in object_list
-          %tr.campaign.object-row.select-row(data-object-id="{{ obj.id }}" data-uuid="{{ obj.uuid }}" onclick='handleRowClicked(event)')
+          %tr.campaign.object-row.select-row(data-object-id="{{ obj.id }}" data-uuid="{{ obj.uuid }}" onclick='handleRowClicked(event)' href="{% url 'campaigns.campaign_read' obj.uuid %}")
             - if org_perms.campaigns.campaign_update
               %td.campaign.checkbox.object-row-checkbox
                 %temba-checkbox{onclick:"handleRowSelection(this)"}
