--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -263,8 +263,9 @@
       var row = event.target.closest("tr");
       var uuid = row.getAttribute("data-uuid");
 
+
       {% if is_spa %}
-      fetchURL("/contact/read/" + uuid + "/");
+      goto(event, row);
       {% else %}
       gotoLink("/contact/read/" + uuid + "/");
       {% endif %}
