- added max attachment length to msg and broadcast class - created custom compose widget and custom compose field for use in django forms - scheduled create - template displaying custom widget, and displaying "this field is required" error when form is submitted and the compose field does not have any text or attachments - scheduled update - in progress - minor re-formatting of some templates/utils/forms haml files to display component attributes vertically for readability

--- a/templates/msgs/broadcast_scheduled_create.haml
+++ b/templates/msgs/broadcast_scheduled_create.haml
@@ -3,11 +3,10 @@
 
 -block fields
   -if form.omnibox
-      -render_field 'omnibox'
+    -render_field 'omnibox'
 
-  -render_field 'text'
-
-  %temba-compose(chatbox="true" attachments="true" counter="true" onchange="handleComposeChanged(event)")
+  -if form.compose
+    -render_field 'compose'
 
   -include 'includes/schedule_fields.haml' with form=form
 
@@ -41,16 +40,4 @@
           repeatDays.classList.add("hidden");
         }
       });
-    }
-
-    function handleComposeChanged(event){
-      debugger;
-      var compose = modalBody.querySelector("temba-compose");
-      if(compose){
-        var text = compose.currentChat;
-        var form_text = modalBody.querySelector("#id_text");
-        if(form_text){
-          form_text.value = text;
-        }
-      }        
     }
