--- a/templates/utils/forms/omnibox_choice.haml
+++ b/templates/utils/forms/omnibox_choice.haml
@@ -3,4 +3,5 @@
   name="{{widget.name}}"
   {% if widget.value %}value="{{widget.value}}"{%endif%}
   endpoint="/contact/omnibox/?"
-></temba-omnibox>
+>
+</temba-omnibox>
