- new broadcast now using compose component widget when creating broadcasts - updated compose widget's render and value_from_datadict fn's to serialize/deserialize the widget's value - new broadcast clean_compose validation errors in progress - renamed "scheduled message" to "broadcast" in several spots

--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -27,7 +27,7 @@
           -empty
             %tr
               %td{colspan:3}
-                -trans "No matching scheduled messages"
+                -trans "No matching broadcasts"
 
 - block paginator
   -if object_list.count
