--- a/templates/msgs/broadcast_scheduled_delete.haml
+++ b/templates/msgs/broadcast_scheduled_delete.haml
@@ -4,7 +4,7 @@
 -block modal
   -block delete-message
     -blocktrans trimmed
-      You are about to delete this scheduled message. There is no way to undo this. Are you sure?
+      You are about to delete this broadcast. There is no way to undo this. Are you sure?
     
   -block delete-form
     %form(method="post")
