--- a/templates/msgs/broadcast_scheduled_spa.haml
+++ b/templates/msgs/broadcast_scheduled_spa.haml
@@ -31,7 +31,7 @@
           -empty
             %tr
               %td{colspan:3}
-                -trans "No matching scheduled messages"
+                -trans "No matching broadcasts"
 
 
 -block extra-less
