Show version number on public index page

--- a/templates/public/public_index.haml
+++ b/templates/public/public_index.haml
@@ -1,8 +1,7 @@
 {% extends "public/public_frame.html" %}
 
 -block content
-  Congrats, you are now running a development version of RapidPro!
-
+  Congrats, you are now running RapidPro {{version}}!
 
   .text-xl.font-normal.mb-2.mt-6
     Getting Started
@@ -35,5 +34,4 @@
       The below copyright and attribution must be presented prominently on your site.
       .copyright(style="margin-top:0.5em")
         %b
-          Copyright © 2012-2022 TextIt, UNICEF. All rights reserved.
-
+          Copyright © 2012-2023 TextIt, UNICEF. All rights reserved.
