--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -798,11 +798,10 @@
   %temba-dialog#legacy-ui(header='Not ready yet?' primaryButtonName='Use the old interface for now' -temba-button-clicked="handleUIConfirm")
     .p-4
       .mb-4
+        The new interface has some great new features, so we encourage you to take some time to get comfortable with it. 
         Soon all accounts will be switched over, so it's better to switch now if you have a moment.
-        The new interface has some great new features, so we encourage you to take some time get comfortable with it. 
-      
-      We understand that you might not be ready to switch in the moment 
-      so we'll continue to support the old interface for a bit. If the new interface isn't working 
-      well for you, we'd love to hear about it.
+
+      We understand that you might not be ready to switch in the moment so we'll continue to support the old interface 
+      for a bit. If the new interface isn't working well for you, we'd love to hear about it.
 
   %temba-lightbox
