Fix legacy goto function for old UI

--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -49,7 +49,7 @@
     event.stopPropagation();
     event.preventDefault();
 
-    var item = event.detail;
+    var item = event.detail.item;
     var href = item.url;
 
     if (href) {
