- added get_attachments to Broadcast model for displaying attachments on broadcasts list page - updated compose widget value_from_datadict to return a dict instead of a string - added attachments column to broadcasts list page

--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -19,6 +19,10 @@
 
             %td.value-text.field_text
               {{ object.get_text }}
+
+            %td.value-text.field_text
+              {{ object.get_attachments }}
+              
             %td.value-next
               -if object.schedule.next_fire
                 .glyph.icon-clock
