--- a/templates/utils/forms/compose.haml
+++ b/templates/utils/forms/compose.haml
@@ -2,5 +2,9 @@
   name="{{ widget.name }}"
   {% include "django/forms/widgets/attrs.html" %}
   value="{% if widget.value %}{{widget.value}}{%endif%}"
+
+  {% comment %} todo - infinite loop troubleshooting
+  currentText="{{ widget.text }}"
+  currentAttachments="{{ widget.attachments }}" {% endcomment %}
 >
 </temba-compose>
