--- a/templates/msgs/broadcast_scheduled_spa.haml
+++ b/templates/msgs/broadcast_scheduled_spa.haml
@@ -23,8 +23,9 @@
             %td.value-text.field_text
               {{ object.get_text }}
             
-            %td.value-text.field_text
-              {{ object.get_attachments }}
+            %td.value-attachments{ style:"margin-top: 5px" }
+              -for attachment in object.get_attachments
+                {% attachment_button attachment %}
 
             %td.value-next
               .whitespace-nowrap.pr-2.pointer-events-none
