--- a/templates/orgs/org_sub_orgs_spa.haml
+++ b/templates/orgs/org_sub_orgs_spa.haml
@@ -29,10 +29,11 @@
     }
 
 -block page-title
-  -trans "Manage Workspaces"
+  -trans "Workspaces"
 
 -block spa-title
-  -trans "Workspaces"
+  #title-text
+    -trans "Workspaces"
 
 -block subtitle
 
