--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -368,6 +368,10 @@
           }
 
           setInnerHTML(containerEle, body);
+          var title = document.querySelector("#title-text");
+          if (title) {
+            document.title = title.innerText;
+          }
 
           if (options) {
             if ('onSuccess' in options) {
@@ -477,13 +481,6 @@
         var menuSelection = response.headers.get("temba_menu_selection");
         if (menu && menuSelection) {
           menu.setFocusedItem(menuSelection);
-        }
-      }
-
-      if (response) {
-        var pageTitle = response.headers.get("x-temba-page-title");
-        if (pageTitle) {
-          document.title = pageTitle;
         }
       }
 
