Use onSpload to wire handlers on account form

--- a/templates/orgs/user_edit.haml
+++ b/templates/orgs/user_edit.haml
@@ -59,12 +59,12 @@
       }, 0);
       
     }
-    
-    window.addEventListener("DOMContentLoaded", function (){
-      wireHandlers();
 
+    onSpload(function(){
+      wireHandlers();
       // also wire them if our formax submits
       document.addEventListener("temba-formax-ready", function(){
         wireHandlers();
       });
-    });
+    })
+    
