- updated get_text, added temp helpers get_attachments_for_widget and get_attachments_for_display in model - replaced message field with compose field in top-level broadcast form, added initial param to compose field - added todo in ScheduledCreate form_valid to call Attachment.parse_all() before saving a new broadcast - replaced message field with compose field in ScheduledUpdate broadcast form - added todo in ScheduledUpdate derive_initial to get attachments object list from db media table - added todo in ScheduledUpdate save to call Attachment.parse_all() before saving an updated broadcast - cleaned up render and value_from_datadict methods in compose widget - cleaned up broadcast list page template - broadcast read and edit page templates in progress

--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -12,25 +12,18 @@
     %table.list.lined.w-full
       %tbody
         -for object in object_list
-          -# TODO - confirm with translation=object.get_translation vs. with object.get_translation as translation
+          -with object.get_translation as translation
 
           %tr.select-row.cursor-pointer{class:'{% cycle row1 row1 %}', onclick:'document.location="{% url "msgs.broadcast_scheduled_read" object.id %}"'}
 
             %td.value-contacts.field_phone
               -include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all
 
-            -# TODO - display using translation["text"]
-              %td.value-text.field_text
-                {{ translation["text"] }}
             %td.value-text.field_text
               {{ object.get_text }}
-            
-            -# TODO - display using translation["attachments"]
-              %td.value-attachments{ style:"margin-top: 5px" }
-                -for attachment in translation["attachments"]
-                  {% attachment_button attachment %}              
+
             %td.value-attachments{ style:"margin-top: 5px" }
-              -for attachment in object.get_attachments
+              -for attachment in object.get_attachments_for_display
                 {% attachment_button attachment %}
               
             %td.value-next
