--- a/templates/msgs/broadcast_scheduled_update.haml
+++ b/templates/msgs/broadcast_scheduled_update.haml
@@ -6,10 +6,14 @@
     -trans "Message Details"
   %fieldset
     -render_field 'omnibox'
-    -render_field 'message'
+    -render_field 'compose'
 
 -block summary
   -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all
 
   .mt-2
     {{ object.get_text }}
+  
+    .value-attachments{ style:"margin-top: 5px" }
+    -for attachment in object.get_attachments_for_display
+      {% attachment_button attachment %}
