- got rid of get_attachments_for_widget and get_attachments_for_display from model - added compose validations to BroadcastForm - switched to using compose_serialize_attachments in ScheduledCreate form_valid - switched to using compose_deserialize_attachments in ScheduledUpdate derive_initial - added temba msgs attachments compose.py with serialize and deserialize helper methods - updated templates to switch back to using object.get_attachments (passing translation var in progress)

--- a/templates/msgs/broadcast_scheduled_update.haml
+++ b/templates/msgs/broadcast_scheduled_update.haml
@@ -15,5 +15,5 @@
     {{ object.get_text }}
   
   .value-attachments{ style:"margin-top: 5px" }
-    -for attachment in object.get_attachments_for_display
+    -for attachment in object.get_attachments
       {% attachment_button attachment %}
