--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -23,7 +23,7 @@
               {{ object.get_text }}
 
             %td.value-attachments{ style:"margin-top: 5px" }
-              -for attachment in object.get_attachments_for_display
+              -for attachment in object.get_attachments
                 {% attachment_button attachment %}
               
             %td.value-next
