--- a/templates/msgs/broadcast_scheduled_spa.haml
+++ b/templates/msgs/broadcast_scheduled_spa.haml
@@ -23,7 +23,14 @@
               -include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all      
 
             %td.value-text.field_text
+              {{ translation.text }}
+
+            %td.value-text.field_text
               {{ object.get_text }}
+
+            %td.value-attachments{ style:"margin-top: 5px" }
+              -for attachment in translation.attachments
+                {% attachment_button attachment %}
 
             %td.value-attachments{ style:"margin-top: 5px" }
               -for attachment in object.get_attachments
